[package]
name = "iced_stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["debug", "image", "canvas", "advanced", "lazy", "async-std"] }
iced_aw = { version = "0.12.2", features = [
    "context_menu",
    "menu",
    "badge",
    "card",
    "grid",
    "tab_bar",
] }
lyon_algorithms = "1.0.5"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
