[package]
name = "iced_stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
file_type = "0.8.9"
iced = { version = "0.13.1", features = [
    "debug",
    "image",
    "canvas",
    "advanced",
    "lazy",
    "async-std",
] }
iced_aw = { version = "0.12.2", features = [
    "context_menu",
    "menu",
    "badge",
    "card",
    "grid",
    "tab_bar",
] }
lyon_algorithms = "1.0.5"
palette = "0.7.6"
rfd = "0.15.4"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
